# Servitor

./: .env  .gitignore  Justfile  LICENSE.txt  README.md  docker-compose.yml
editor/: bun.lockb  package.json
editor/src/: app.css  app.html
editor/src/lib/: editor.ts  node_graph.ts  store.js  types.ts  utils.ts
editor/src/lib/components/: editor.svelte  node_graph.svelte  node_list.svelte  node_list_button.svelte  top_bar.svelte
editor/src/lib/editor/: CustomNode.svelte  basic_types.ts  utils.ts  vars.sass
editor/src/lib/editor/nodes/: CustomNode.svelte  DropDown.svelte
editor/src/lib/icons/: icon-123.svelte  icon-abc.svelte  icon-calculator.svelte  icon-right-arrow.svelte  icon-setting.svelte  icon-table.svelte  icon-trash.svelte  icon-web.svelte  icons.ts
editor/src/lib/node_graph/: basic_types.ts
editor/src/lib/node_graph/nodes/: CustomNode.svelte  DropDown.svelte  Table.svelte
editor/src/routes/: +page.svelte
editor/src/routes/dashboard/: +page.svelte
editor/src/routes/editor/: +page.svelte
editor/static/: app.css
runtime-old/: Cargo.toml
runtime-old/src/: runtime.rs
runtime-old/src/tests/: js_runtime.js
server/: Cargo.toml  schema.sql
server/example/: test.js
server/src/: database.rs  docker.rs  main.rs  routesv1.rs  runtime.rs  services.rs  utils.rs
server/src/routesv1/: account.rs  nodes.rs
server/src/tests/: js_runtime.js  js_runtime.rs  mod.rs
services/: Cargo.toml  Dockerfile  utils.ts
services/AI/: Cargo.toml  README.md  bun.lockb  index.ts  package.json
services/AI/src/: main.rs
services/math/: main.ts
services/ollama/: Cargo.toml
services/ollama/src/: main.rs
services/template-deno/: main.ts
services/template-rust/: Cargo.toml
services/template/src/: main.rs
services/webhook/: Cargo.toml  main.ts
utils/: Cargo.toml
utils/src/: lib.rs
