[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.16.1"
actix-web = "4.5.1"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
typeshare = "1.0.0"
sha2 = "0.10.8"
env_logger = "0.11.3"

# datab0.7.10se
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
] }
