[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.6"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
typeshare = "1.0.0"
sha2 = "0.10.8"
env_logger = "0.11.3"
chrono = { version = "0.4", features = ["serde"] }

deno_core = "0.287.0"
deno_ops = "0.163.0"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
    "chrono",
] }

utils = { path = "../utils" }
actix-jwt-auth-middleware = "0.5.0"
dotenv_rs = "0.16.1"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
ed25519-compact = "2.1.1"
md5 = "0.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
debug = false
