[workspace]
resolver = "2"
members = ["webhook", "ollama"]

[workspace.package]
edition = "2021"
license = "Sustainable Use License"
rust-version = "1.76"
version = "0.1.0"

[workspace.dependencies]
ollama-rs = "0.1.8"
actix-web = "4"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }

[release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
debug = false

[workspace.lints.rust]
unsafe_code = "deny"
elided_lifetimes_in_paths = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"               # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
