[package]
name = "servitor-service-ai-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = "0.1.8"
actix-web = "4"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
debug = false
