[package]
name = "ollama"
version.workspace = true
authors = ["Elham Aryanpur <elhamaryanpur5@gmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ollama-rs = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
